--- a/test-web/src/main/webapp/test.html
+++ b/test-web/src/main/webapp/test.html
@@ -29,6 +29,11 @@
     <script type="text/javascript" src="js/ajaxfileupload.js"></script>
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript">
+    function ab(){
+    a = "heaaaa";
+    alert(a);
+    }
+    window.onload = ab();
     $("#cli").click(function(){
     	alert("clicked");
     	
